# System-Monitor

./: .gitignore  CMakeLists.txt  README.md
include/: format.h  linux_parser.h  process.h  processor.h  system.h
src/: format.cpp  linux_parser.cpp  main.cpp  ncurses_display.cpp  process.cpp  processor.cpp  system.cpp
test/: process copy.cpp  process copy.h  process_a.cpp  test.cpp  test2.cpp  test3.cpp
